# plotters-iced

./: Cargo.toml
src/: chart.rs  renderer.rs  utils.rs  widget.rs
src/backend/: mod.rs
